fixed list spacing (kind of) and fixed (also kind of) the dot graph/code spacing/flex issue

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -67,8 +67,14 @@ title - job
 -sub
 -sub
 */
+
 .sub-list {
-  padding: 1vh;
+  padding: 1vmin;
+}
+
+.sub-sub-list {
+  padding-left: 3vmin;
+  padding-right: 3vmin;
 }
 
 .experience-inner {
